@@ -64,6 +64,7 @@ import org.apache.hadoop.hive.metastore.api.OpenTxnRequest;
 import org.apache.hadoop.hive.metastore.api.OpenTxnsResponse;
 import org.apache.hadoop.hive.metastore.api.Partition;
 import org.apache.hadoop.hive.metastore.api.ReplTblWriteIdStateRequest;
+import org.apache.hadoop.hive.metastore.api.ReplayedTxnsForPolicyResult;
 import org.apache.hadoop.hive.metastore.api.SeedTableWriteIdsRequest;
 import org.apache.hadoop.hive.metastore.api.SeedTxnIdRequest;
 import org.apache.hadoop.hive.metastore.api.ShowCompactRequest;
@@ -383,7 +384,7 @@ public abstract class TxnHandler implements TxnStore, TxnStore.MutexAPI {
     if (openTxnList.isEmpty()) {
       return Collections.emptyList();
     }
-      List<Long> targetTxnIds = null;
+      List<Long> targetTxnIds;
       try {
           targetTxnIds = jdbcResource.execute(new GetTargetTxnIdListForPolicyHandler(replPolicy, openTxnList));
       } catch (MetaException e) {
@@ -511,7 +512,7 @@ public abstract class TxnHandler implements TxnStore, TxnStore.MutexAPI {
       return -1;
     }
     assert (targetTxnIds.size() == 1);
-    return targetTxnIds.get(0);
+    return targetTxnIds.getFirst();
   }
 
   @Override
@@ -525,19 +526,21 @@ public abstract class TxnHandler implements TxnStore, TxnStore.MutexAPI {
     TxnType txnType = new AbortTxnFunction(rqst).execute(jdbcResource); 
     if (txnType != null) {
       if (transactionalListeners != null && (!rqst.isSetReplPolicy() || !TxnType.DEFAULT.equals(rqst.getTxn_type()))) {
-        notifyCommitOrAbortEvent(rqst.getTxnid(),EventMessage.EventType.ABORT_TXN, txnType, jdbcResource.getConnection(), txnWriteDetails, transactionalListeners);
+        notifyCommitOrAbortEvent(rqst.getTxnid(), EventMessage.EventType.ABORT_TXN,
+            txnType, jdbcResource.getConnection(), txnWriteDetails, transactionalListeners);
       }
     }
   }
 
-  public static void notifyCommitOrAbortEvent(long txnId, EventMessage.EventType eventType, TxnType txnType, Connection dbConn,
-                                       List<TxnWriteDetails> txnWriteDetails, List<TransactionalMetaStoreEventListener> transactionalListeners) throws MetaException {
+  public static void notifyCommitOrAbortEvent(long txnId, EventMessage.EventType eventType, TxnType txnType,
+        Connection dbConn, List<TxnWriteDetails> txnWriteDetails,
+        List<TransactionalMetaStoreEventListener> transactionalListeners) throws MetaException {
     List<Long> writeIds = txnWriteDetails.stream()
-            .map(TxnWriteDetails::getWriteId)
-            .toList();
+        .map(TxnWriteDetails::getWriteId)
+        .toList();
     List<String> databases = txnWriteDetails.stream()
-            .map(TxnWriteDetails::getDbName)
-            .toList();
+        .map(TxnWriteDetails::getDbName)
+        .toList();
     ListenerEvent txnEvent;
     if (eventType.equals(EventMessage.EventType.ABORT_TXN)) {
       txnEvent = new AbortTxnEvent(txnId, txnType, null, databases, writeIds);
@@ -545,7 +548,7 @@ public abstract class TxnHandler implements TxnStore, TxnStore.MutexAPI {
       txnEvent = new CommitTxnEvent(txnId, txnType, null, databases, writeIds);
     }
     MetaStoreListenerNotifier.notifyEventWithDirectSql(transactionalListeners,
-            eventType, txnEvent, dbConn, sqlGenerator);
+        eventType, txnEvent, dbConn, sqlGenerator);
   }
 
 
@@ -562,7 +565,7 @@ public abstract class TxnHandler implements TxnStore, TxnStore.MutexAPI {
       //Doing it here before the metadata tables are updated below.
       List<TxnWriteDetails> txnWriteDetails = getWriteIdsMappingForTxns(new HashSet<>(txnIds));
       txnWriteDetailsMap.putAll(txnWriteDetails.stream()
-                                               .collect(Collectors.groupingBy(TxnWriteDetails::getTxnId)));
+          .collect(Collectors.groupingBy(TxnWriteDetails::getTxnId)));
 
     }
 
@@ -598,7 +601,8 @@ public abstract class TxnHandler implements TxnStore, TxnStore.MutexAPI {
       if (transactionalListeners != null) {
         for (Long txnId : txnIds) {
           notifyCommitOrAbortEvent(txnId, EventMessage.EventType.ABORT_TXN,
-                  nonReadOnlyTxns.getOrDefault(txnId, TxnType.READ_ONLY), dbConn, txnWriteDetailsMap.getOrDefault(txnId, new ArrayList<>()), transactionalListeners);
+              nonReadOnlyTxns.getOrDefault(txnId, TxnType.READ_ONLY), dbConn,
+              txnWriteDetailsMap.getOrDefault(txnId, new ArrayList<>()), transactionalListeners);
         }
       }
     } catch (SQLException e) {
@@ -659,6 +663,22 @@ public abstract class TxnHandler implements TxnStore, TxnStore.MutexAPI {
     new ReplTableWriteIdStateFunction(rqst, mutexAPI, transactionalListeners).execute(jdbcResource);
   }
 
+  /**
+   *
+    * @param replPolicy replication policy for which we want to get the replayed transactions
+   * @return Map of source and target transaction ids for the given replication policy.
+   */
+  @Override
+  public ReplayedTxnsForPolicyResult getReplayedTxnsForPolicy(String replPolicy) throws MetaException {
+    try {
+      return sqlRetryHandler.executeWithRetry(
+          new SqlRetryCallProperties().withCallerId("GetReplayedTxnsForPolicyHandler"),
+          () -> jdbcResource.execute(new GetReplayedTxnsForPolicyHandler(replPolicy)));
+    } catch (TException e) {
+      throw new MetaException(e.getMessage());
+    }
+  }
+
   @Override
   public GetValidWriteIdsResponse getValidWriteIds(GetValidWriteIdsRequest rqst) throws MetaException {
     return new GetValidWriteIdsFunction(rqst, openTxnTimeOutMillis).execute(jdbcResource);
@@ -700,7 +720,7 @@ public abstract class TxnHandler implements TxnStore, TxnStore.MutexAPI {
     long highWaterMark = jdbcResource.execute(new GetHighWaterMarkHandler());
     if (highWaterMark >= rqst.getSeedTxnId()) {
       throw new MetaException(MessageFormat
-          .format("Invalid txnId seed {}, the highWaterMark is {}", rqst.getSeedTxnId(), highWaterMark));
+          .format("Invalid txnId seed {0}, the highWaterMark is {1}", rqst.getSeedTxnId(), highWaterMark));
     }
     jdbcResource.getJdbcTemplate().getJdbcTemplate()
         .execute((Statement stmt) -> stmt.execute(dbProduct.getTxnSeedFn(rqst.getSeedTxnId())));
@@ -745,7 +765,7 @@ public abstract class TxnHandler implements TxnStore, TxnStore.MutexAPI {
    */
   @Override
   public Materialization getMaterializationInvalidationInfo(
-          CreationMetadata creationMetadata, String validTxnListStr) throws MetaException {
+        CreationMetadata creationMetadata, String validTxnListStr) throws MetaException {
     return new GetMaterializationInvalidationInfoFunction(creationMetadata, validTxnListStr).execute(jdbcResource);
   }
 
@@ -990,21 +1010,6 @@ public abstract class TxnHandler implements TxnStore, TxnStore.MutexAPI {
     return previous_timeout;
   }
 
-  protected Connection getDbConn(int isolationLevel, DataSource connPool) throws SQLException {
-    Connection dbConn = null;
-    try {
-      dbConn = connPool.getConnection();
-      dbConn.setAutoCommit(false);
-      dbConn.setTransactionIsolation(isolationLevel);
-      return dbConn;
-    } catch (SQLException e) {
-      if (dbConn != null) {
-        dbConn.close();
-      }
-      throw e;
-    }
-  }
-
   /**
    * Isolation Level Notes
    * Plain: RC is OK
@@ -1165,8 +1170,8 @@ public abstract class TxnHandler implements TxnStore, TxnStore.MutexAPI {
   private List<TxnWriteDetails> getWriteIdsMappingForTxns(Set<Long> txnIds) throws MetaException {
     try {
       return sqlRetryHandler.executeWithRetry(
-              new SqlRetryCallProperties().withCallerId("GetWriteIdsMappingForTxnIdsHandler"),
-              () -> jdbcResource.execute(new GetWriteIdsMappingForTxnIdsHandler(txnIds)));
+          new SqlRetryCallProperties().withCallerId("GetWriteIdsMappingForTxnIdsHandler"),
+          () -> jdbcResource.execute(new GetWriteIdsMappingForTxnIdsHandler(txnIds)));
     } catch (MetaException e) {
       throw e;
     } catch (TException e) {
